Made slight changes to frontpage

--- a/src/apps/copo_core/templates/copo/base_simple.html
+++ b/src/apps/copo_core/templates/copo/base_simple.html
@@ -42,7 +42,7 @@
     <![endif]-->
     <style>
         body {
-            background-image: url('{% static 'copo/img/wheat.jpg' %}');
+            background-image: url("{% static 'copo/img/wheat.jpg' %}");
             background-repeat: no-repeat;
             background-size: cover;
         }
@@ -51,7 +51,7 @@
 <body>
 
 <div class="text-center" style="padding:50px">
-    <img src="{% static 'copo/img/copo_white_800.png' %}" height="200px">
+    <img src="{% static 'assets/img/COPO-logo-full-CMYK-white.png' %}" height="200px">
 </div>
 
 {% block content %}If you see this there is something wrong with the templates - you probably didn't overwrite the
