--- a/src/apps/copo_core/templates/copo/copo_docs.html
+++ b/src/apps/copo_core/templates/copo/copo_docs.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="{% static 'copo/webui_popover/jquery.webui-popover.css' %}">
 
 
-    <link rel="shortcut icon" href="{% static 'copo/img/COPO_icon.png' %}"/>
+    <link rel="shortcut icon" href="{% static 'copo/img/favicon_black.png' %}"/>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="{% static 'copo/css/font-awesome/css/font-awesome.min.css' %}">
