--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -251,7 +251,7 @@
 
             $content += '<p style="margin-top:10px"  for="gdpr_check">Please check this box if you consent to your identifiable information being stored in COPO. We do not use this information for any process but this information will be submitted to public repositories and well be part of the public record.</p>';
             $content += '<input class="form-check-input" type="checkbox" value="" id="gdpr_check">'
-            $content += '<label class="form-check-label" for="gdpr_check"> I Agree</label>'
+            $content += '<label class="form-check-label" for="gdpr_check">&ensp; I Agree</label>'
             $content += '</div>';
 
             var dialog = new BootstrapDialog({
