Bug fix: Fixed the update of images in the Image modal carousel

--- a/src/apps/copo_core/templates/copo/component_sample_images_modal.html
+++ b/src/apps/copo_core/templates/copo/component_sample_images_modal.html
@@ -244,8 +244,9 @@
 <script>
     $(document).ready(function () {
       // Reset carousel on modal close 
-      $('#imageModal').on('show.bs.modal', function () {
-       $('#imageCarousel').carousel({}).carousel(0);
+      $('#imageModal').on('hidden.bs.modal', function () {
+        if($('.carousel-inner').children()) $('.carousel-inner').children().remove();
+        if($('.carousel-indicators').children()) $('.carousel-indicators').children().remove();
       });
     });
 </script>
