Upgrade to SOP/manifest v2.5

--- a/src/apps/copo_core/templates/copo/unauthorised_page.html
+++ b/src/apps/copo_core/templates/copo/unauthorised_page.html
@@ -16,9 +16,14 @@
 {% endblock %}
 
 
-{% block title_block %} Unauthorisation : {% endblock %}
+{% block title_block %} Unauthorisation{% endblock %}
 
 
+{% block image_div %}
+<div class="text-center" style="padding:50px">
+    <img src="{% static 'assets/img/COPO-logo-full-CMYK-black.png' %}" height="200px">
+</div>
+{% endblock image_div%}
 
 {% block content %}
 
