--- a/src/apps/copo_landing_page/templates/manifests.html
+++ b/src/apps/copo_landing_page/templates/manifests.html
@@ -31,7 +31,7 @@
             </thead>
             <tbody>
             <tr>
-                <td>ASG - (Aquatic Symbiosis Genomics)</td>
+                <td>ASG (Aquatic Symbiosis Genomics)</td>
                 <td id="current_asg_version"></td>
                 <td>
                     <div class="dropdown">
@@ -56,7 +56,7 @@
                 </td>
             </tr>
             <tr>
-                <td>DTOL - (Darwin Tree of Life)</td>
+                <td>DTOL (Darwin Tree of Life)</td>
                 <td id="current_dtol_version"></td>
                 <td>
                     <div class="dropdown">
@@ -80,7 +80,7 @@
                 </td>
             </tr>
             <tr>
-                <td>ERGA - (European Reference Genome Atlas)</td>
+                <td>ERGA (European Reference Genome Atlas)</td>
                 <td id="current_erga_version"></td>
                 <td>
                     <div class="dropdown">
@@ -106,11 +106,18 @@
             <tr>
                 <td>Barcoding</td>
                 <td>1.0</td>
-                <td><a href="{% static 'assets/manifests/TOL_BARCODE_MANIFEST_TEMPLATE.xlsx' %}">ToL_BARCODING_MANIFEST.xlsx</a>
+                <td><a href="{% static 'assets/manifests/BARCODING_MANIFEST_TOL_TEMPLATE.xlsx' %}">BARCODING_MANIFEST_TOL_TEMPLATE.xlsx</a>
                 </td>
                 <td></td>
             </tr>
-
+            <tr>
+                <td>Reads</td>
+                <td>1.0</td>
+                <td><a
+                        href="{% static 'assets/manifests/READS_MANIFEST_TOL_TEMPLATE.xlsx' %}">READS_MANIFEST_TOL_TEMPLATE.xlsx</a>
+                </td>
+                <td></td>
+            </tr>
             </tbody>
         </table>
     </div>
