--- a/src/apps/copo_core/templates/copo/base_simple.html
+++ b/src/apps/copo_core/templates/copo/base_simple.html
@@ -50,9 +50,11 @@
 </head>
 <body>
 
+{% block image_div %}
 <div class="text-center" style="padding:50px">
     <img src="{% static 'assets/img/COPO-logo-full-CMYK-white.png' %}" height="200px">
 </div>
+{% endblock image_div%}
 
 {% block content %}If you see this there is something wrong with the templates - you probably didn't overwrite the
     content block{% endblock %}
