Removed banner from frontpage

--- a/src/apps/copo_landing_page/templates/frontpage.html
+++ b/src/apps/copo_landing_page/templates/frontpage.html
@@ -43,9 +43,9 @@
             </div>
             -->
             
-            <div class="green-subtitle">
+            <!-- <div class="green-subtitle">
                 COPO: FAIR Data Brokering for the Life Sciences
-            </div>
+            </div> -->
        
             <div class="button_bar big">
                 <a href="https://copo-project.org/copo">
