Upgraded to jquery 3.7.1 (based on current state of main branch); Removed old versions; Fixed errors with jquery upgrade

--- a/src/apps/copo_core/templates/copo/component_cookie_modal.html
+++ b/src/apps/copo_core/templates/copo/component_cookie_modal.html
@@ -80,8 +80,8 @@
                     cookie_response: getCookie('cookiesAccepted'),
                 },
             }).done(function () {})
-            .error(function (e) {
-                console.error(e);
+            .fail(function (e) {
+                // console.log(e); // Cookies have been rejected
             });
         }
 
