Corrected spelling error

--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -404,7 +404,7 @@
 
 <div id="hidden_notification" class="hidden">
     <div>
-        Message Recieved:<br/>{{ created }}</div>
+        Message Received:<br/>{{ created }}</div>
     <br/>
     <b>{{ latest_message }}</b>
 </div>
