Changed component icons

--- a/src/apps/copo_accession/templates/copo/accessions/copo_accessions.html
+++ b/src/apps/copo_accession/templates/copo/accessions/copo_accessions.html
@@ -65,7 +65,7 @@
                                     <div><strong>All COPO accessions: </strong>To explore all accessions on COPO,
                                         click the
                                         <button class="circular tiny ui icon pink button">
-                                            <i class="icon barcode"></i>
+                                            <i class="icon sitemap"></i>
                                         </button>
                                         icon.
                                     </div>
