--- a/src/apps/copo_core/templates/copo/components_template.html
+++ b/src/apps/copo_core/templates/copo/components_template.html
@@ -626,20 +626,20 @@
          TOL of samples within a profile -->
     <button style="display: none" title="Inspect TOL"
             class="big circular ui icon yellow button tol_inspect copo-tooltip">
-        <i class="icon clipboard list" style="font-size: 1.3em"></i>
+        <i class="icon clipboard list"></i>
     </button>
 
     <!-- button for erga_users, erga_sample_managers, dtol_users or dtol_sample_managers to inspect
        TOL of samples by GAL within a profile -->
     <button class="big circular ui icon green button tol_inspect_gal copo-tooltip" title="Inspect TOL by GAL">
-        <i class="icon building" style="font-size: 1.3em"></i>
+        <i class="icon building"></i>
     </button>
 
     <!-- button for erga_users, erga_sample_managers, dtol_users or dtol_sample_managers to view
          all sample accessions on COPO -->
     <button style="display: none" title="View COPO Accessions' Dashboard"
             class="big circular ui icon pink button copo_accessions copo-tooltip">
-        <i class="icon barcode" style="font-size: 1.3em"></i>
+        <i class="icon sitemap"></i>
     </button>
 
     <!-- record tasks button -->
