--- a/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
+++ b/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
@@ -91,12 +91,12 @@
                     style="display: none"
                     class="big circular ui icon yellow button pull-right copo_tol_dashboard copo-tooltip"
                     title="View COPO Tree of Life Dashboard">
-                <i class="icon dashboard" style="font-size: 1.3em"></i>
+                <i class="icon chart line"></i>
             </button>
             <button id="copo_accessions_dashboard_shortcut"
                     style="display: none" title="View COPO Accessions' Dashboard"
                     class="big circular ui icon pink button pull-right copo_accessions copo-tooltip">
-                <i class="icon barcode" style="font-size: 1.3em"></i>
+                <i class="icon sitemap"></i>
             </button>
         </div>
     </div>
