--- a/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_inspect_gal.html
+++ b/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_inspect_gal.html
@@ -38,17 +38,17 @@
                 <div class="word-break">Tree of Life (ToL) Inspection by Genome Acquisition Labs (GAL)</div>
                 <button class="big circular ui icon green button tol_inspect copo-tooltip"
                         title="View TOL Inspection">
-                    <i class="icon clipboard list" style="font-size: 1.3em"></i>
+                    <i class="icon clipboard list"></i>
                 </button>
                 <button id="copo_tol_dashboard_shortcut"
                         class="big circular ui icon yellow button copo_tol_dashboard copo-tooltip"
                         title="View COPO Tree of Life Dashboard">
-                    <i class="icon dashboard" style="font-size: 1.3em"></i>
+                    <i class="icon chart line"></i>
                 </button>
                 <button id="copo_accessions_dashboard_shortcut"
                         title="View COPO Accessions' Dashboard"
                         class="big circular ui icon pink button copo_accessions copo-tooltip">
-                    <i class="icon barcode" style="font-size: 1.3em"></i>
+                    <i class="icon sitemap"></i>
                 </button>
             </h3>
         </div>
