Revised code for sending emails when ERGA samples have been accepted

--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -255,7 +255,7 @@
 <!-- end template components -->
 
 <!-- cookie modal -->
-{% include "component_cookie_modal.html" with user=user%}
+{% include "component_cookie_modal.html"%}
 <!-- end cookie modal -->
 
 <div id="hidden_notification" class="hidden">
