Made slight changes

--- a/src/apps/copo_core/templates/copo/privacy_notice.html
+++ b/src/apps/copo_core/templates/copo/privacy_notice.html
@@ -37,7 +37,7 @@
 <div class="row">
     <div class="col-md-10 col-md-offset-1">
         <h1 class="text-center">Privacy Notice</h1>
-        <p>This Privacy notice explains what data is collected by the <b>Collaborative OPen Omics (COPO)</b> website
+        <p>This Privacy Notice explains what data is collected by the <b>Collaborative OPen Omics (COPO)</b> website
             service, its
             purposes, how the data is processed and how COPO keeps it secure.
         </p>
@@ -53,7 +53,7 @@
         <h2>Data Collected</h2>
         <p>COPO adopts appropriate data collection, validation, storage and processing practices as well as security
             measures to protect against unauthorised access, alteration, disclosure or destruction of your 
-            personal information, Orcid credentials and metadata provided on our service.
+            personal information, <a href="https://orcid.org/">Orcid</a> credentials and metadata provided on our service.
         </p>
 
         <h3>Information collected:</h3>
@@ -61,8 +61,7 @@
             <li>Internet Protocol (IP) address</li>
             <li>Operating system</li>
             <li>Browser</li>
-            <li>Firstname, lastname and username after you sign into the service with your <a
-                    href="https://orcid.org/">Orcid</a> credentials
+            <li>First name, last name and username after you sign into the service with your Orcid credentials
             </li>
             <li>Email address (after you input it in the dialog shown after a first-time access to the service)</li>
             <li>Date and time when a profile record and manifests are created or updated</li>
@@ -85,6 +84,9 @@
             <li>To monitor errors and exceptions that may occur during metadata submission</li>
             <li>To register your email address with your COPO user account and to submit 
                 your email address to public repositories after manifest submissions
+            </li>
+            <li>To send email notifications when submitted samples have been accepted or 
+                rejected by a sample manager
             </li>
         </ul><br>
 
