Upgraded Font-awesome CSS to v6.5.1

--- a/src/apps/copo_core/templates/copo/components_template.html
+++ b/src/apps/copo_core/templates/copo/components_template.html
@@ -315,7 +315,7 @@
              title="Delete records"
              tabindex="0"
              id="delete_button">
-            <i class=" fa fa-trash-o"></i>
+            <i class=" fa fa-trash-can"></i>
             <span class="action-label" style="padding-left: 3px;">Delete</span>
         </div>
 
@@ -326,7 +326,7 @@
              data-btntype="multi"
              title="Delete datafiles"
              tabindex="0">
-            <i class=" fa fa-trash-o"></i>
+            <i class=" fa fa-trash-can"></i>
             <span class="action-label" style="padding-left: 3px;">Delete Datafiles</span>
         </div>
 
@@ -381,7 +381,7 @@
              data-btntype="multi"
              title="Delete Read"
              tabindex="0">
-            <i class=" fa fa-trash-o"></i>
+            <i class=" fa fa-trash-can"></i>
             <span class="action-label" style="padding-left: 3px;">Delete</span>
         </div>
 
