--- a/src/apps/copo_core/templates/copo/copo_docs.html
+++ b/src/apps/copo_core/templates/copo/copo_docs.html
@@ -27,7 +27,7 @@
     <link rel="shortcut icon" href="{% static 'copo/img/favicon_black.png' %}"/>
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="{% static 'copo/css/font-awesome/css/font-awesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'copo/css/fontawesome/fontawesome-6.5.1.min.css' %}">
     <link rel="stylesheet" href="{% static 'copo/css/awesome/css/awesome-bootstrap-checkbox.css' %}">
 
     <!-- Selectize Components -->
