--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -40,7 +40,7 @@
 
     <!-- Font Awesome -->
     <link rel="stylesheet" media="print" onload="this.media='all'"
-          href="{% static 'copo/css/font-awesome/css/font-awesome.min.css' %}">
+          href="{% static 'copo/css/fontawesome/fontawesome-6.5.1.min.css' %}">
     {#    <link rel="stylesheet" href="{% static 'copo/css/awesome/css/awesome-bootstrap-checkbox.css' %}">#}
 
     <!-- Selectize Components -->
@@ -306,7 +306,7 @@
                         <span data-copo-tour-id="global_user_authenticated_button">{{ user }}
                             <span class="caret" style="margin-left: 5px;"></span></span>
                     {% else %}
-                        <i class="fa fa-sign-in copo-header-icons" aria-hidden="true">&nbsp
+                        <i class="fa fa-sign-in-alt copo-header-icons" aria-hidden="true">&nbsp
                             <span class="caret"></span></i>
                         Login
                     {% endif %}
@@ -347,7 +347,7 @@
                                                    href="{%  url 'copo_login:logout' %}">
                                                    
                             <div class="custom-nav-items">
-                                <i class="fa fa-sign-out" aria-hidden="true"></i>
+                                <i class="fa fa-sign-out-alt" aria-hidden="true"></i>
                                 <span class="icon_text">Logout</span>
                             </div>
                         </a>
@@ -356,7 +356,7 @@
                         <li>
                             <a href="{%  url 'copo_login:login' %}" role="menuitem" tabindex="-1">
                                 <div class="custom-nav-items">
-                                    <i class="fa fa-sign-in" aria-hidden="true"></i>
+                                    <i class="fa fa-sign-in-alt" aria-hidden="true"></i>
                                     <span class="icon_text">Login</span>
                                 </div>
                             </a>
