--- a/src/apps/copo_landing_page/templates/base1.html
+++ b/src/apps/copo_landing_page/templates/base1.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" media="print" onload="this.media='all'"
           href="{% static 'copo/semantic_ui/semantic.min.css' %}">
     <link href="/static/assets/css/bootstrap.css" rel="stylesheet"/>
-    <link href="/static/assets/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="/static/copo/css/fontawesome/fontawesome-6.5.1.min.css" rel="stylesheet"/>
 
     <script src="{% static 'copo/js/jquery-3.7.1.min.js' %}"></script>
     <script src="{% static 'copo/semantic_ui/semantic.min.js' %}"></script>
