--- a/src/apps/copo_landing_page/templates/news.html
+++ b/src/apps/copo_landing_page/templates/news.html
@@ -23,7 +23,7 @@
     <!-- BOOTSTRAP CORE STYLE CSS -->
     <link href="/static/assets/css/bootstrap.css" rel="stylesheet"/>
     <!-- FONTAWESOME STYLE CSS -->
-    <link href="/static/assets/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="/static/copo/css/fontawesome/fontawesome-6.5.1.min.css" rel="stylesheet"/>
     <!-- CUSTOM STYLE CSS -->
     <link href="/static/assets/css/style.css" rel="stylesheet"/>
     <!-- GOOGLE FONT -->
