Added info icon to sequencing centres displayed once 'View more...'  profile button is clicked

--- a/src/apps/copo_profile/static/copo_profile/css/copo_profile_index.css
+++ b/src/apps/copo_profile/static/copo_profile/css/copo_profile_index.css
@@ -240,6 +240,11 @@ ul.associated_type_ulTag {
 }
 
 /* Sequencing centres */
+.sequencing_centre_info_icon {
+    position: relative;
+    left: 2px;
+}
+
 .sequencing_centre_div_value {
     height: fit-content;
     margin-bottom: 10px;
