Changed url for COPO readthedocs documentation

--- a/src/apps/copo_landing_page/templates/dtol.html
+++ b/src/apps/copo_landing_page/templates/dtol.html
@@ -158,7 +158,7 @@
     <div class="container">
         <div class="row col-md-10 col-md-offset-1">
             <h3>Resources for DToL collectors and submitters</h3>
-            <p><a href="https://raw.githubusercontent.com/collaborative-open-plant-omics/Documentation/main/assets/files/COPO_visual_user_documentation.pdf" download>Visual guide to COPO usage for
+            <p><a href="https://copo-docs.readthedocs.io/en/latest/submissions/tol-general-submission-guide.html">Visual guide to COPO usage for
                 submitters (PDF)</a></p>
             <p>Latest SOP in GitHub (<a href="https://github.com/darwintreeoflife/metadata">link</a>)</p>
         </div>
