--- a/src/apps/copo_core/templates/copo/privacy_notice.html
+++ b/src/apps/copo_core/templates/copo/privacy_notice.html
@@ -128,7 +128,7 @@
         <br>
 
         <h2>Cookies</h2>
-        <p>This service uses "cookies" to store information about the web pages on the service that the visitor has
+        <p>This service uses "cookies" to store information about the web pages that the visitor has
             accessed or visited.
             The information is used to log any errors or exceptions that may occur and user sessions.
         </p><br>
