--- a/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
+++ b/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
@@ -149,7 +149,7 @@
                                     <strong>Profile Components: </strong>
                                     <p>Once you have created a work profile, you can start creating components within
                                         the profile. COPO provides templates/wizards for creating and managing different
-                                        components including: Datafiles, Samples, Submission, Publications, People, and
+                                        components such as Datafiles, Samples and
                                         Annotations. Profile components can be created in any order.</p></li>
                                 <li>
                                     <strong>Quick Tour: </strong>
